# cpp-python

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: pypi.yml
src/: bindings.cpp  example.cpp
